--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div class="content">
             <div class="hobby_text">
                 <h2>немного обомне</h2>
-                <img class="separator" src="separator2.png" alt="separator">
+                <img class="separator" src="/separator2.png" alt="separator">
                 <p class="block">
  Меня зовут Майя мне 11 я люблю животных 
   дома у меня 2 морских свинки и кот я их очень люблю их.
