--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <div class="hobby">
         <div class="content">
             <div class="hobby_text">
-                <h2>немного обомне</h2>
+                <h2>немного обо мне</h2>
                 <img class="separator" src="/separator2.png" alt="separator">
                 <p class="block">
- Меня зовут Майя мне 11 я люблю животных 
-  дома у меня 2 морских свинки и кот я их очень люблю их.
+ Меня зовут Майя. Mне 11. Я люблю животных 
+  дома у меня 2 морских свинки и кот. Я их очень люблю их.
    Я учюсь в 19 школе.и И занемаюсь флай йогой.
              </div>
         </div>
