--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 <h2>немного обо мне</h2>
                 <img class="separator" src="/separator2.png" alt="separator">
                 <p class="block">
- Меня зовут Майя. Mне 11. Я люблю животных 
+ Меня зовут Майя. Mне 11. Я люблю животных:
   дома у меня 2 морских свинки и кот. Я их очень люблю их.
    Я учюсь в 19 школе.и И занемаюсь флай йогой.
              </div>
